--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <li><a href="#aboutme">About Me</a></li>
       <li><a href="#skills">Skills</a></li>
       <li><a href="#projects">Projects</a></li>
+      <li><a href="#blogs">Blogs</a></li>
+      <li><a href="#resume">Resume</a></li>
       <li><a href="#contactme">Contact</a></li>
     </ul>
   </nav>
@@ -76,23 +78,46 @@
     </div>
   </section>
 
+  <section id="blogs">
+    <h2>My Blogs</h2>
+    <div class="blogs-container">
+      <a href="blog1.html" target="_blank" class="resume-btn" >
+        <div class="blogs">
+            <h3>Why I Almost Didn’t Start This Blog (And Why I Did Anyway)</h3>
+            <p>Click here to read.. </p>
+        </div>
+      </a>
+      
+    </div>
+  </section>
+
+
+  <section id="resume">
+    <h2>Resume</h2>
+      <div class="resume-container">
+        <div class="resume">
+          <h3>Software Developer Resume</h3>
+          <embed src="Parinita Software Developer.pdf" type="application/pdf" width="100%" height="600px" />
+        </div>
+        <div class="resume">
+          <h3>Content Writer Resume</h3>
+          <embed src="Parinita Technical Writer.pdf" type="application/pdf" width="100%" height="600px" />
+        </div>
+      </div>
+  </section>
+
   <!-- Contact Me Section -->
   <section id="contactme">
-        <h2>Resume</h2>
-        <p>Download my full resume from the link below.</p>
-       <p><a href="https://drive.google.com/file/d/1ZLx-_ZJZM8mDj0Rrv7cTkRpHFqae2LY6/view?usp=sharing" target="_blank" class="resume-btn" >Download Software Developer Resume</a></p> 
-        <p> <a href="https://drive.google.com/file/d/1eCXhHt6u8X8544oj-CmzMaOEsyzGVZLB/view?usp=sharing" target="_blank" class="resume-btn" >Download Content Writer Resume</a>
-        </p>
-<br>
-<br>
         <h2>Contact Me</h2>
         <p>If you'd like to get in touch, feel free to reach out via email or connect with me on LinkedIn!</p>
-    
     <ul>
       <li>Email: <a href="mailto:parinita.rawale@gmail.com">parinita.rawale@gmail.com</a> | <a href="https://www.linkedin.com/in/parinita-rawale-15b334325/" target="_blank">LinkedIn</a> |  <a href="https://github.com/parinitarawale" target="_blank">GitHub</a></li>
     </ul>
   </section>
 
+  <footer>
+    <p>&copy; 2025 Parinita Rawale. All rights reserved.</p>
+  </footer>
 
 </body>
 </html>
