--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
       <div class="project">
         <h3>Netflix Clone</h3>
         <p>A static replica of the Netflix homepage using HTML, CSS, and PHP for the layout and dynamic elements.</p>
+        <a href="https://netflix-clone-nu-lac.vercel.app/">To view project </a>
+        <p><a href="https://github.com/parinitarawale/NetflixClone">GitHub Link</a></p>
       </div>
       <div class="project">
         <h3>Crime Reporting System</h3>
