--- a/index.html
+++ b/index.html
@@ -83,29 +83,30 @@
   <section id="blogs">
     <h2>My Blogs</h2>
     <div class="blogs-container">
-      <a href="blog1.html" target="_blank" class="resume-btn" >
+      <a href="blog1.html" target="_blank" class="resume-btn">
         <div class="blogs">
-            <h3>Why I Almost Didn’t Start This Blog (And Why I Did Anyway)</h3>
-            <p>Click here to read.. </p>
+          <h3>#1 Why I Almost Didn’t Start This Blog (And Why I Did Anyway)</h3>
+          <p>Click here to read..</p>
         </div>
       </a>
-      
+  
+      <a href="blog2.html" target="_blank" class="resume-btn">
+        <div class="blogs">
+          <h3>#2 What Nobody Tells You About Job Hunting After Graduation</h3>
+          <p>Click here to read..</p>
+        </div>
+      </a>
     </div>
   </section>
+  
 
 
   <section id="resume">
     <h2>Resume</h2>
       <div class="resume-container">
         <div class="resume">
-          <h3>Software Developer Resume</h3>
-          <embed src="Parinita Software Developer.pdf" type="application/pdf" width="100%" height="600px" />
+          <embed src="Parinita - Resume .pdf" type="application/pdf" width="100%" height="700px" />
         </div>
-        <div class="resume">
-          <h3>Content Writer Resume</h3>
-          <embed src="Parinita Technical Writer.pdf" type="application/pdf" width="100%" height="600px" />
-        </div>
-      </div>
   </section>
 
   <!-- Contact Me Section -->
